# bumimport

./: README.md  pyproject.toml  setup.py
.github/workflows/: cd.yml  ci.yml
bumimport/: __init__.py  strategies.py
examples/: run.py
examples/package/level1/: module1.py
examples/package/level1/level2/: module2.py
tests/: __init__.py  test_flat_import.py
tests/fixtures/package_w_ignore_pattern/: __init__.py
tests/fixtures/package_w_ignore_pattern/level1/: module1.py
tests/fixtures/package_w_ignore_pattern/level1/level2/: module2.py
tests/fixtures/package_w_module_w_dot_in_name/level1/level2/: module2.py
tests/fixtures/package_w_module_w_stdlib_name/: __init__.py
tests/fixtures/package_w_module_w_stdlib_name/level1/level2/: module2.py
tests/package_w_module_w_stdlib_name/level1/: os.py
tests/package_w_module_w_stdlib_name/level1/level2/: module2.py
