[project]
requires-python = ">=3.11"

[tool.mypy]
strict = true

[tool.ruff]
# list of settings can be found at https://docs.astral.sh/ruff/settings/
fix = true
line-length = 100
required-version = ">=0.9.6"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 88
line-ending = "lf"

[tool.ruff.lint]
# list of error codes can be found at https://docs.astral.sh/ruff/rules/
# enable preview for some pylint rules
preview = true
# add pylint rules
select = ["E4", "E7", "E9", "F", "PLC", "PLE", "PLR"]

[tool.ruff.lint.pylint]
max-args = 8
max-branches = 16
max-locals = 20
max-nested-blocks = 8