[project]
name = "bumimport"
version = "1.0.1"
description = "A Python package for various lazy (discouraged) import strategies."
readme = "README.md"
license = "GPL-3.0-only"
authors = [
    {name = "Ryan Baker"},
]
requires-python = ">=3.9"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
]

[project.urls]
Repository = "https://www.github.com/ryanbaekr/bumimport"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
strict = true

[tool.ruff]
# list of settings can be found at https://docs.astral.sh/ruff/settings/
fix = true
line-length = 100
required-version = ">=0.9.6"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 88
line-ending = "lf"

[tool.ruff.lint]
# list of error codes can be found at https://docs.astral.sh/ruff/rules/
# enable preview for some pylint rules
preview = true
# add pylint rules
select = ["E4", "E7", "E9", "F", "PLC", "PLE", "PLR"]

[tool.ruff.lint.pylint]
max-args = 8
max-branches = 16
max-locals = 20
max-nested-blocks = 8